@@ -44,9 +44,9 @@ install: cowsay.1
 	$(INSTALL) -d $(DESTDIR)$(mandir)/man1
 	$(INSTALL_DATA) cowsay.1 $(DESTDIR)$(mandir)/man1
 	$(INSTALL_DATA) cowthink.1 $(DESTDIR)$(mandir)/man1
-	$(INSTALL) -d $(DESTDIR)$(datadir)
-	cp -R share/cows $(DESTDIR)$(datadir)
-	$(INSTALL) -d $(DESTDIR)$(datadir)/site-cows
+	$(INSTALL) -d $(DESTDIR)$(datadir)/cowsay
+	cp -R share/cows $(DESTDIR)$(datadir)/cowsay
+	$(INSTALL) -d $(DESTDIR)$(datadir)/cowsay/site-cows
 
 uninstall:
 	rm -f $(DESTDIR)$(bindir)/cowsay $(DESTDIR)$(bindir)/cowthink
